force-app/main/default/objects/Account/fields/Health_Status__c.field-meta.xml
<CustomField>
    <fullName>Health_Status__c</fullName>
    <inlineHelpText>Red - Mission critical, no usage and/or support engagement - this in combination with no response to CSM for engagement, unresolved escalations. Customer has already communicated that they will not be renewing.
Yellow - Usage trending down, multiple support tickets + escalations. BUT we have issues we think we can fix.</inlineHelpText>
    <label>Health Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Green</fullName>
                <color>#78C953</color>
                <default>true</default>
                <label>Green</label>
            </value>
            <value>
                <fullName>Red</fullName>
                <color>#FF0000</color>
                <label>Red</label>
            </value>
            <value>
                <fullName>Testing</fullName>
            </value>
            <value>
                <fullName>Yellow</fullName>
                <color>#F3D904</color>
                <label>Yellow</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>