force-app/main/default/objects/Account/fields/Instance_Infrastructure_Type__c.field-meta.xml
<CustomField>
    <fullName>Instance_Infrastructure_Type__c</fullName>
    <label>Instance/ Infrastructure Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Shared Cloud</fullName>
            </value>
            <value>
                <fullName>Managed Dedicated</fullName>
            </value>
            <value>
                <fullName>On-Premise</fullName>
            </value>
            <value>
                <fullName>Unmanaged Dedicated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>