force-app/main/default/objects/Account/fields/Internal_Exec_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Internal_Exec_Sponsor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Internal Exec Sponsor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>InternalExecSponsor</relationshipName>
    <type>Lookup</type>
</CustomField>