force-app/main/default/objects/Account/fields/Last_Owner_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Owner_Change_Date__c</fullName>
    <description>This field was requested by Rich Flati 5/4/2022. It will be populated with the last owner of the account and kept up to date by AccountTrigger2 calling AccountTriggerHandler.BeforeUpdate. The reason is to easily be able to identify all of former employee X&apos;s accounts even if they are currently unassigned because we now want to assign them to new employee Y.</description>
    <label>Last Owner Change Date</label>
    <type>Date</type>
</CustomField>