force-app/main/default/objects/Account/fields/layouttest_field__c.field-meta.xml
<CustomField>
    <fullName>layouttest_field__c</fullName>
    <label>layouttest field</label>
    <length>18</length>
    <type>Text</type>
</CustomField>