force-app/main/default/objects/Account/fields/Library__c.field-meta.xml
<CustomField>
    <fullName>Library__c</fullName>
    <label>Library</label>
    <length>30</length>
    <type>Text</type>
</CustomField>