force-app/main/default/objects/Account/fields/Lost_Opps_Count__c.field-meta.xml
<CustomField>
    <fullName>Lost_Opps_Count__c</fullName>
    <label>Lost Opps Count</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Lost</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>