force-app/main/default/objects/Account/fields/Max_Not_Won_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Max_Not_Won_Start_Date__c</fullName>
    <description>Maximum start date of an opp that is open or lost. Used to determine if an account needs a renewal opp to follow its last won opp.</description>
    <label>Max Not Won Opportunity Start Date</label>
    <summarizedField>Opportunity.Subscription_Start_Date__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>notEqual</operation>
        <value>Closed Won</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>