force-app/main/default/objects/Account/fields/Max_Subscription_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Max_Subscription_Start_Date__c</fullName>
    <label>Max Subscription Start Date</label>
    <summarizedField>Opportunity.Subscription_Start_Date__c</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>