force-app/main/default/objects/Account/fields/Max_Won_Subscription_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Max_Won_Subscription_Start_Date__c</fullName>
    <label>Max Won Subscription Start Date</label>
    <summarizedField>Opportunity.Subscription_Start_Date__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>