force-app/main/default/objects/Account/fields/Min_Open_Opp_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Min_Open_Opp_Start_Date__c</fullName>
    <description>Minimum Start Date of an open opp for this account.</description>
    <label>Min Open Opp Start Date</label>
    <summarizedField>Opportunity.Subscription_Start_Date__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.IsClosed</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>