force-app/main/default/objects/Account/fields/Min_Open_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Min_Open_Renewal_Date__c</fullName>
    <label>Min Open Renewal Date</label>
    <summarizedField>Opportunity.Subscription_Start_Date__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.Is_Renewal__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>notEqual</operation>
        <value>Closed Won, Closed Lost</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>