force-app/main/default/objects/Account/fields/Min_Won_Subscription_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Min_Won_Subscription_Start_Date__c</fullName>
    <label>Min Won Subscription Start Date</label>
    <summarizedField>Opportunity.Subscription_Start_Date__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Invoiced, Closed Won</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Opportunity_ARR_Amount__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Opt_Out_Date__c</field>
        <operation>equals</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>