force-app/main/default/objects/Account/fields/Moni_traininglabel__c.field-meta.xml
<CustomField>
    <fullName>Moni_traininglabel__c</fullName>
    <defaultValue>false</defaultValue>
    <description>new training account label</description>
    <label>Moni-traininglabel</label>
    <type>Checkbox</type>
</CustomField>