force-app/main/default/objects/Account/fields/Most_Recent_Intro_Call__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Intro_Call__c</fullName>
    <label>Most Recent Intro Call</label>
    <type>Url</type>
</CustomField>