force-app/main/default/objects/Account/fields/MSA_Link__c.field-meta.xml
<CustomField>
    <fullName>MSA_Link__c</fullName>
    <description>Link to the MSA for the account.</description>
    <label>MSA Link</label>
    <type>Url</type>
</CustomField>