force-app/main/default/objects/Account/fields/MSA_Note__c.field-meta.xml
<CustomField>
    <fullName>MSA_Note__c</fullName>
    <label>MSA Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>