force-app/main/default/objects/Account/fields/MSA_Renewal_Change_in_Fees__c.field-meta.xml
<CustomField>
    <fullName>MSA_Renewal_Change_in_Fees__c</fullName>
    <description>autorabit.com/agreement section 4.3 Change in Fees allows for a 5% annual increase. However, some customers negotiate a different rate. Whatever rate is applicable for this customer must be populated here.</description>
    <inlineHelpText>autorabit.com/agreement section 4.3 Change in Fees allows for a 5% annual increase. However, some customers negotiate a different rate. Whatever rate is applicable for this customer must be populated here.</inlineHelpText>
    <label>MSA Renewal Change in Fees %</label>
    <precision>8</precision>
    <scale>5</scale>
    <type>Percent</type>
</CustomField>