force-app/main/default/objects/Account/fields/My_CSM_Account__c.field-meta.xml
<CustomField>
    <fullName>My_CSM_Account__c</fullName>
    <formula>IF( Customer_Success_Manager__r.Id = $User.Id, True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Field created for Reporting purpose.</inlineHelpText>
    <label>My CSM Account</label>
    <type>Checkbox</type>
</CustomField>