force-app/main/default/objects/Account/fields/Naveen_Field_in_account_object__c.field-meta.xml
<CustomField>
    <fullName>Naveen_Field_in_account_object__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hi all</description>
    <label>Naveen Field in account object</label>
    <type>Checkbox</type>
</CustomField>