force-app/main/default/objects/Account/fields/Needs_Reassignment__c.field-meta.xml
<CustomField>
    <fullName>Needs_Reassignment__c</fullName>
    <description>Returns true for accounts that need the owner changed to an active user on the team fitting the account&apos;s status and region.</description>
    <formula>if( Owner.IsActive = false ||  Suggested_Owner_Team__c != TEXT( Owner.Team__c ), true, false)</formula>
    <inlineHelpText>Returns true for accounts that need the owner changed to an active user on the team fitting the account&apos;s status and region</inlineHelpText>
    <label>Needs Reassignment</label>
    <type>Checkbox</type>
</CustomField>