force-app/main/default/objects/Account/fields/of_Lost_Opporunities__c.field-meta.xml
<CustomField>
    <fullName>of_Lost_Opporunities__c</fullName>
    <label># of Lost Opporunities</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Lost</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>