force-app/main/default/objects/Account/fields/of_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>of_Opportunities__c</fullName>
    <description>This field is created for reporting purposes.</description>
    <inlineHelpText>This field is created for reporting purposes.</inlineHelpText>
    <label># of Opportunities</label>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>