force-app/main/default/objects/Account/fields/of_Seats_Vault_from_SD__c.field-meta.xml
<CustomField>
    <fullName>of_Seats_Vault_from_SD__c</fullName>
    <label># of Seats Vault (from SD)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>