force-app/main/default/objects/Account/fields/Oppty_Name__c.field-meta.xml
<CustomField>
    <fullName>Oppty_Name__c</fullName>
    <label>Oppty Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>