force-app/main/default/objects/Account/fields/Opt_NameDropping__c.field-meta.xml
<CustomField>
    <fullName>Opt_NameDropping__c</fullName>
    <inlineHelpText>No = specifically no name dropping
Yes = specifically name dropping allowed
Blank = no emails or cases related to this</inlineHelpText>
    <label>Name Dropping Allowed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>