force-app/main/default/objects/Account/fields/Other_Integration__c.field-meta.xml
<CustomField>
    <fullName>Other_Integration__c</fullName>
    <inlineHelpText>Specify the name of the other Integration.</inlineHelpText>
    <label>Other Integration</label>
    <length>20</length>
    <type>Text</type>
</CustomField>