force-app/main/default/objects/Account/fields/Other_Plan_of_Action__c.field-meta.xml
<CustomField>
    <fullName>Other_Plan_of_Action__c</fullName>
    <inlineHelpText>Please enter your own Plan of Action for &apos;Other&apos;.</inlineHelpText>
    <label>Other Plan of Action</label>
    <type>TextArea</type>
</CustomField>