force-app/main/default/objects/Account/fields/Outreach_Group__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Group__c</fullName>
    <label>Outreach Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>DNC</fullName>
            </value>
            <value>
                <fullName>Existing Client</fullName>
            </value>
            <value>
                <fullName>New Business</fullName>
            </value>
            <value>
                <fullName>Open Opportunity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>