force-app/main/default/objects/Account/fields/Parent_of_Customer__c.field-meta.xml
<CustomField>
    <fullName>Parent_of_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if account is the parent of an account who has Customer Status Current or Late Renewal. This field is important for identifying accounts that are Prospect Related to Customer in Customer_Status__c. This field is updated daily by schedAccountParentOfCustomerUpdate.</description>
    <label>Parent of Customer</label>
    <type>Checkbox</type>
</CustomField>