force-app/main/default/objects/Account/fields/Partner_Type__c.field-meta.xml
<CustomField>
    <fullName>Partner_Type__c</fullName>
    <label>Partner Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Consulting/Implementation Partner (CP)</fullName>
            </value>
            <value>
                <fullName>Independent Software Vendor (ISV)</fullName>
            </value>
            <value>
                <fullName>Managed Service Provider (MSP)</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
            <value>
                <fullName>Referral Partner</fullName>
            </value>
            <value>
                <fullName>Reseller</fullName>
            </value>
            <value>
                <fullName>System Integrator (SI)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>