force-app/main/default/objects/Account/fields/Partner_Yes_No__c.field-meta.xml
<CustomField>
    <fullName>Partner_Yes_No__c</fullName>
    <label>Partner (Yes/No)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>