force-app/main/default/objects/Account/fields/Pause_Marketing_Until_Date__c.field-meta.xml
<CustomField>
    <fullName>Pause_Marketing_Until_Date__c</fullName>
    <formula>IF(ISBLANK(Account_Lost_Date__c),NULL,Account_Lost_Date__c+180)</formula>
    <label>Pause Marketing Until Date</label>
    <type>Date</type>
</CustomField>