force-app/main/default/objects/Account/fields/Pendo_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Pendo_Account_ID__c</fullName>
    <label>Pendo_Account ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>