force-app/main/default/objects/Account/fields/Pendo_Days_Active__c.field-meta.xml
<CustomField>
    <fullName>Pendo_Days_Active__c</fullName>
    <label>Pendo_Days Active</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>