force-app/main/default/objects/Account/fields/Pendo_Events__c.field-meta.xml
<CustomField>
    <fullName>Pendo_Events__c</fullName>
    <label>Pendo_Events</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>