force-app/main/default/objects/Account/fields/Pendo_Instance_Name__c.field-meta.xml
<CustomField>
    <fullName>Pendo_Instance_Name__c</fullName>
    <label>Pendo_instance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>