force-app/main/default/objects/Account/fields/Pendo_Last_Visit__c.field-meta.xml
<CustomField>
    <fullName>Pendo_Last_Visit__c</fullName>
    <label>Pendo_Last Visit</label>
    <type>DateTime</type>
</CustomField>