force-app/main/default/objects/Account/fields/Pendo_NPS_Score__c.field-meta.xml
<CustomField>
    <fullName>Pendo_NPS_Score__c</fullName>
    <label>Pendo_NPS Score</label>
    <length>21</length>
    <type>Text</type>
</CustomField>