force-app/main/default/objects/Account/fields/Pendo_Version__c.field-meta.xml
<CustomField>
    <fullName>Pendo_Version__c</fullName>
    <label>Pendo_Version</label>
    <type>TextArea</type>
</CustomField>