force-app/main/default/objects/Account/fields/Pendo_Visitors__c.field-meta.xml
<CustomField>
    <fullName>Pendo_Visitors__c</fullName>
    <label>Pendo_Visitors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>