force-app/main/default/objects/Account/fields/Plan_of_Action__c.field-meta.xml
<CustomField>
    <fullName>Plan_of_Action__c</fullName>
    <inlineHelpText>Please select applicable options.</inlineHelpText>
    <label>Plan of Action</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Communication sent to AutoRABIT Management</fullName>
            </value>
            <value>
                <fullName>Internal Stakeholders Meeting Scheduled</fullName>
            </value>
            <value>
                <fullName>Red Account planning with CS Leadership</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>