force-app/main/default/objects/Account/fields/PO_Required__c.field-meta.xml
<CustomField>
    <fullName>PO_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if the customer requires a PO to pay an invoice.</description>
    <inlineHelpText>Check this box if the customer requires a PO to pay an invoice.</inlineHelpText>
    <label>PO Required</label>
    <type>Checkbox</type>
</CustomField>