force-app/main/default/objects/Account/fields/Premium_Support_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Premium_Support_Engineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Premium Support Engineer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ManagedServicesLead</relationshipName>
    <type>Lookup</type>
</CustomField>