force-app/main/default/objects/Account/fields/Previous_Max_Subs__c.field-meta.xml
<CustomField>
    <fullName>Previous_Max_Subs__c</fullName>
    <label>Previous_Max_Subs</label>
    <summarizedField>Opportunity.Number_of_Product_Subscriptions__c</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>