force-app/main/default/objects/Account/fields/ProfileRetrieveforCommitLabel__c.field-meta.xml
<CustomField>
    <fullName>ProfileRetrieveforCommitLabel__c</fullName>
    <defaultValue>true</defaultValue>
    <label>ProfileRetrieveforCommitLabel</label>
    <type>Checkbox</type>
</CustomField>