force-app/main/default/objects/Account/fields/PS_Amount__c.field-meta.xml
<CustomField>
    <fullName>PS_Amount__c</fullName>
    <description>Dollar Amount for PS hours</description>
    <label>PS Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>