force-app/main/default/objects/Account/fields/QTY_CodeScan_EOM__c.field-meta.xml
<CustomField>
    <fullName>QTY_CodeScan_EOM__c</fullName>
    <description>QTY for opportunity line items with accounting bin CodeScan last day of current month and Accounting_Bin_Quantity_Count__c = true</description>
    <inlineHelpText>QTY for opportunity line items with accounting bin CodeScan last day of current month and Accounting_Bin_Quantity_Count__c = true</inlineHelpText>
    <label>QTY CodeScan EOM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>