force-app/main/default/objects/Account/fields/Record_Owner_From_Vtiger__c.field-meta.xml
<CustomField>
    <fullName>Record_Owner_From_Vtiger__c</fullName>
    <label>Record Owner From Vtiger</label>
    <length>18</length>
    <type>Text</type>
</CustomField>