force-app/main/default/objects/Account/fields/Referenceble__c.field-meta.xml
<CustomField>
    <fullName>Referenceble__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Automatically sets to true if at least one contact is checked as referenceable.</description>
    <inlineHelpText>Is true if at least one contact is checked as referenceable.</inlineHelpText>
    <label>Referenceable</label>
    <type>Checkbox</type>
</CustomField>