force-app/main/default/objects/Account/fields/Referral_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Referral_Percentage__c</fullName>
    <description>Partner Contractual Referral Percentage</description>
    <inlineHelpText>Partner Contractual Referral Percentage</inlineHelpText>
    <label>Referral Percentage</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>