force-app/main/default/objects/Account/fields/Renewal_Notice_Sent__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Notice_Sent__c</fullName>
    <label>Renewal Notice Sent</label>
    <length>15</length>
    <type>Text</type>
</CustomField>